<resources>
    <string name="app_name">Dicory</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_desc">Connect with others from Dicoding platform and post \nyour stories!</string>
    <string name="dicory_greet">Welcome to Dicory!</string>
    <string name="logo_coDesc">Logo Communication</string>
    <string name="lang">Language</string>
    <string name="login_coDes">Logo Login</string>
    <string name="login_greet">Login into Dicory!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="make_account">Let\'s make a new Account!</string>
    <string name="username">Username</string>
    <string name="account_username">Account Username</string>
    <string name="account_description">Description of the comment</string>
    <string name="content_description">Stories Photo</string>
    <string name="upload_your_story">Upload your Story!</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="hint_description">Description</string>
    <string name="upload">Upload</string>
    <string name="image_placeholder">Image Placeholder</string>
    <string name="shutter">camera_shutter</string>
    <string name="switch_camera">switch_camera</string>
    <string name="password_err">Password should be 8 characters or more!</string>
    <string name="check_your_input">The email or password that you inputted is wrong!</string>
    <string name="invalid_email">Invalid email address!</string>
    <string name="email_used">Email is already used!</string>
    <string name="ok_login">Please login with your email and password!</string>
    <string name="detail_image_stories">Detail image stories</string>
    <string name="failed_permission">Failed to get permission</string>
    <string name="success_post">Story has been uploaded!</string>
    <string name="failed_post">Failed to upload story!</string>
    <string name="choose_file">Please choose your file</string>
    <string name="failed_taking_picture">Failed to take a picture!</string>
    <string name="failed_open_camera">Failed to open the camera!</string>
    <string name="add_new_story">Add new story</string>
    <string name="logout">Logout</string>
    <string name="main_title">Stories</string>
    <string name="detail_title">Story Detail</string>
    <string name="post_title">Story Overview</string>
    <string name="desc_minimal">Description should at least be 1 character!</string>
    <string name="uploaded_date">Date of uploaded stories</string>
    <string name="maps">Maps</string>
    <string name="lan">Stories Latitude</string>
    <string name="lon">Stories Longitude</string>
    <string name="failed_parse">Failed to Parse!</string>
    <string name="style_not_found">Unable to find custom style, Error: </string>
    <string name="retry">Retry...</string>
</resources>